@@ -6,6 +6,8 @@ Version 1.5.1
 -----------------------------------------------------------------------
 + Added error check to mysql.php file to prevent over valued CHARs
 + Fixed bug #1708507. Extra string character.
++ Database - bug #1713219 - Added auto detect parameter to insert
+             function in saveObject
 
 Version 1.5.0
 -----------------------------------------------------------------------
